# Contextible

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Contextive/contextvault/: TESTING_GUIDE.md
contextvault/: BEAUTIFUL_CLI_SUMMARY.md  CLI_SHOWCASE.md  ENTERPRISE_FEATURES_SUMMARY.md  ENTERPRISE_IMPLEMENTATION_COMPLETE.md  HOW_TO_RUN_CLI.md  INSTALL_FOR_BEGINNERS.md  PATH_CONFIGURATION.md  PROJECT_INTEGRATION_GUIDE.md  README.md  README_CONTEXTIBLE.md  REAL_STATUS.md  contextible  contextible.py  init_database.py  install.sh  install_contextible.sh  install_simple.py  install_simple.sh  requirements.txt  run_cli.sh  setup_seamless.sh  setup_user_path.sh  test_all_dashboard_commands.py  user_config.py  user_config_local.py.example  validation_report.txt  verify_installation.py
contextvault-app/: README.md
contextvault-app/scripts/: build_app.sh  test_setup.sh
contextvault-app/src/: app.js  index.html  styles.css
contextvault-app/src-tauri/: Cargo.toml
contextvault-app/src-tauri/src/: main.rs
contextvault/contextvault/: config.py  main.py
contextvault/docs/: MCP_GOOGLE_DRIVE_SETUP.md
contextvault/scripts/: auto_proxy.py  cleanup_debug_code.py  compelling_demo_final.py  debug_context_injection.py  debug_context_retrieval.py  debug_injection.py  debug_injection_pipeline.py  debug_learning.py  demo_beautiful_cli.py  final_proof_test.py  final_verification_test.py  final_working_demo.py  (+28 more)
docs/: TROUBLESHOOTING.md  USAGE.md
(+61 files in other folders)
