[package]
name = "contextvault-app"
version = "1.0.0"
description = "ContextVault - Personal AI Memory Assistant"
authors = ["ContextVault Team"]
license = "MIT"
repository = "https://github.com/contextvault/contextvault"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "system-tray", "notification"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
